css/coderdojoka.css
/* ... */
.btn-default {
    border: 1px solid #42dca3;
    color: #42dca3;
    background-color: transparent;
}

.btn-default:hover,
.btn-default:focus {
    border: 1px solid #42dca3;
    outline: 0;
    color: #000;
    background-color: #42dca3;
}

ul.banner-social-buttons {
    margin-top: 0;
}

@media (max-width: 1199px) {
    ul.banner-social-buttons {
        margin-top: 15px;
    }
}

@media (max-width: 767px) {
    ul.banner-social-buttons li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
    }

    ul.banner-social-buttons li:last-child {
        margin-bottom: 0;
    }
}

footer {
    padding: 50px 0;
}

footer p {
    margin: 0;
}

::-moz-selection {
    text-shadow: none;
    background: #fcfcfc;
    background: rgba(255, 255, 255, .2);
}

::selection {
    text-shadow: none;
    background: #fcfcfc;
    background: rgba(255, 255, 255, .2);
}

img::selection {
    background: 0 0;
}

img::-moz-selection {
    background: 0 0;
}

body {
    webkit-tap-highlight-color: rgba(255, 255, 255, .2);
}

#timeline {
    list-style: none;
    position: relative;
}

#timeline:before {
    top: 0;
    bottom: 60px;
    position: absolute;
    content: " ";
    width: 2px;
    background-color: #42dca3;
    left: 50%;
    margin-left: -1.5px;
}

#timeline .clearFix {
    clear: both;
    height: 0;
}

#timeline .timeline-badge {
    color: #fff;
    width: 50px;
    height: 50px;
    font-size: 1.2em;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    text-align: center;
    position: absolute;
    top: 20px;
    left: 50%;
    margin-left: -25px;
    background-color: #42dca3;
    z-index: 100;
    border-top-right-radius: 50%;
    border-top-left-radius: 50%;
    border-bottom-right-radius: 50%;
    border-bottom-left-radius: 50%;
}

#timeline .timeline-badge span.timeline-balloon-date-day {
    font-size: 1.4em;
}

#timeline .timeline-badge span.timeline-balloon-date-month {
    font-size: .7em;
    position: relative;
    top: -10px;
    text-transform: uppercase;
}

#timeline .timeline-badge.timeline-filter-movement {
    background-color: #ffffff;
    font-size: 1.7em;
    height: 29px;
    margin-left: -16px;
    width: 29px;
    top: 40px;
}

#timeline .timeline-badge.timeline-filter-movement span {
    color: #42dca3;
    font-size: 1.3em;
    top: -1px;
}

#timeline .timeline-badge.timeline-future-movement {
    background-color: #ffffff;
    height: 35px;
    width: 35px;
    font-size: 1.7em;
    position: relative;
    margin-left: -18px;
}

#timeline .timeline-badge.timeline-future-movement span {
    color: #42dca3;
    font-size: .9em;
    top: 2px;
    left: 1px;
}

#timeline .timeline-movement {
    border-bottom: dashed 1px #42dca3;
    position: relative;
    min-height: 100px;
}

#timeline .timeline-movement.timeline-movement-top {
    height: 60px;
}

#timeline .timeline-row-future {
    position: relative;
    height: 80px;
}

#timeline .timeline-movement .timeline-item {
    padding: 20px 0;
    top: 14px;
    font-size: 1.2em;
}

#timeline .timeline-movement .timeline-item .timeline-panel {
    border: 1px solid #42dca3;
    border-radius: 3px;
    background-color: #FFFFFF;
    color: #666;
    padding: 10px;
    position: relative;
    -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
}

#timeline .timeline-movement .timeline-item .timeline-panel .timeline-panel-ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

#timeline .timeline-movement .timeline-item .timeline-panel.credits .timeline-panel-ul {
    text-align: right;
}

#timeline .timeline-movement .timeline-item .timeline-panel.credits .timeline-panel-ul li {
    color: #666;
}

#timeline .timeline-movement .timeline-item .timeline-panel.credits .timeline-panel-ul li span.importo {
    color: #468c1f;
    font-size: 1.3em;
}

#timeline .timeline-movement .timeline-item .timeline-panel.debits .timeline-panel-ul {
    text-align: left;
}

#timeline .timeline-movement .timeline-item .timeline-panel.debits .timeline-panel-ul span.importo {
    color: #e2001a;
    font-size: 1.3em;
}

#timeline .question {
    padding-right: 10px;
    color: #42dca3;
    font-weight: bold;
}

#timeline .join_data {
    color: #42dca3;
    font-weight: bold;
}

.timeline-item a {
    color: #000;
    border-bottom: 1px dashed #42dca3;
}

.timeline-item a:hover,
.timeline-item a:focus {
    text-decoration: none;
    color: #ccc;
}

@media (max-width: 850px) {

    #news_container {
        bottom: 0px !important;
    }
}

@media (max-width: 767px) {

    #news_container {
        display: none;
    }

    #timeline:before {
        left: 35px;
    }

    #timeline .timeline-badge {
        left: 50px;
    }

    #timeline .timeline-movement .timeline-item {
        padding: 20px 0 20px 100px;
        text-align: left;
    }

    #timeline .timeline-movement .timeline-item-first {
        padding-top: 5px;
        padding-bottom: 5px;
    }

    #timeline .timeline-movement .timeline-item-last {
        padding-top: 5px;
        padding-bottom: 20px;
    }
}

.ul_unstyled {
    list-style: none;
    padding: 0;
}

.belt_container {
    padding: 10px;
    padding-top: 20px;
    text-align: left;
    border: 1px rgb(221, 221, 221) solid;
    border-bottom-right-radius: 4px;
    border-bottom-left-radius: 4px;

}

/* Um Bilder rechtsbündig anzuzeigen */

.rechts_400 {
    max-width: 400px;
    float: none;
    margin: 0;
}

@media (min-width: 768px) {

    .rechts_400 {
        float: right;
        margin-left: 8px;
        margin-top: 8px;
    }
}

#puzzle {
    margin-bottom: 200px;
}

#news_container {
    position: absolute;
    left: 0;
    bottom: 40px;
    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 14pt;
    text-align: left;
}

#news_container a {
    color: #008C58;
    cursor: hand;
}

#news_container a:hover {
    color: #00bf77;
}
/* ... */

